--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -23,15 +23,65 @@ android {
         }
     }
 
+    compileOptions {
+
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+
+
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    dataBinding {
+        enabled true
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "androidx.legacy:legacy-support-v4:$versions.legacy_version"
+
+    // Material Design Dependency
+    implementation "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
+    implementation "com.google.android.material:material:$versions.material"
+
+    // Coroutines Dependency
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutine"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutine"
+
+    // Navigation Component Dependency
+    implementation "androidx.navigation:navigation-fragment-ktx:$versions.navigation_component"
+    implementation "androidx.navigation:navigation-ui-ktx:$versions.navigation_component"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$versions.navigation_component"
+
+
+    // Lifecycle ViewModel Dependency
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle_version"
+
+    // Fragment Dependency
+    implementation "androidx.fragment:fragment-ktx:$versions.fragment"
+    implementation "androidx.cardview:cardview:$versions.cardview"
+    implementation "androidx.recyclerview:recyclerview:$versions.recyclerview"
+
+
+    // Koin for Android
+    implementation "org.koin:koin-android:$versions.koin_version"
+    implementation "org.koin:koin-android-scope:$versions.koin_version"
+    implementation "org.koin:koin-android-viewmodel:$versions.koin_version"
+
+    // Timber - Logging Dependency
+    implementation "com.jakewharton.timber:timber:$versions.timber"
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    kapt "com.android.databinding:compiler:3.1.4"
+
+
 }
