--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+
+    ext.navigation_component="2.3.0-alpha04"
     repositories {
         google()
         jcenter()
@@ -10,7 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_component"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -27,3 +29,17 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext.versions = [:]
+versions.material="1.1.0"
+versions.coroutine="1.1.0"
+versions.constraint_layout="1.1.3"
+versions.navigation_component="2.3.0-alpha05"
+versions.lifecycle_version="2.2.0"
+versions.fragment="1.2.2"
+versions.cardview="1.0.0"
+versions.recyclerview="1.1.0"
+versions.koin_version="2.1.5"
+versions.timber="4.7.1"
+versions.legacy_version="1.0.0"
+versions.circleImageView = "3.1.0"
