--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
+
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
@@ -21,6 +22,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+
+
+    configurations.all() {
+        resolutionStrategy.force "org.antlr:antlr4-runtime:4.5.3"
+        resolutionStrategy.force "org.antlr:antlr4-tool:4.5.3"
     }
 
     compileOptions {
@@ -77,11 +85,19 @@ dependencies {
     implementation "org.koin:koin-android-scope:$versions.koin_version"
     implementation "org.koin:koin-android-viewmodel:$versions.koin_version"
 
-    // Timber - Logging Dependency
-    implementation "com.jakewharton.timber:timber:$versions.timber"
+
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    kapt "com.android.databinding:compiler:3.1.4"
+    kapt "com.android.databinding:compiler:3.6.3"
+
+    def room_version = "2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+
+
+
 
 
 }
